kubernetes/transaction.yaml
apiVersion: v1
kind: Service
metadata:
  name: transaction-ms-service
spec:
  ports:
  - port: 8073
    targetPort: 8073
  selector:
    app: transaction-ms
---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: transaction-ms
spec:
  selector:
    matchLabels:
      app: transaction-ms
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: transaction-ms
    spec:
      containers:
      - name: transaction-ms
        image: thomaskubant/transaction-ms:1.0
        ports:
        - containerPort: 8073
          name: transaction-ms
