kubernetes/underwriter.yaml
apiVersion: v1
kind: Service
metadata:
  name: underwriter-ms-service
spec:
  ports:
  - port: 8071
    targetPort: 8071
  selector:
    app: underwriter-ms
---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: underwriter-ms
spec:
  selector:
    matchLabels:
      app: underwriter-ms
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: underwriter-ms
    spec:
      containers:
      - name: underwriter-ms
        image: thomaskubant/underwriter-ms:1.0
        ports:
        - containerPort: 8071
          name: underwriter-ms
